// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OkuAlertDialog > Controlled > renders correctly 1`] = `
"<div>
  <div><img src=\\"https://images.unsplash.com/photo-1682686580224-cd46ea1a6950?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=500&amp;q=80\\" alt=\\"a large white house with a red roof\\"></div><button type=\\"button\\" aria-haspopup=\\"dialog\\" aria-expanded=\\"true\\" aria-controls=\\"oku-15\\" data-state=\\"open\\" class=\\"alert-dialog-trigger\\">Buy this house</button>
  <!--teleport start-->
  <!--teleport end-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`OkuAlertDialog > Controlled > should be able to close 1`] = `
<body
  style=""
>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  >
    <div>
      <div>
        <img
          alt="a large white house with a red roof"
          src="https://images.unsplash.com/photo-1682686580224-cd46ea1a6950?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80"
        />
      </div>
      
      <button
        aria-controls="oku-21"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="alert-dialog-trigger"
        data-state="closed"
        type="button"
      >
        Buy this house
      </button>
      
      
      <!---->
      <!---->
      
      
      
    </div>
  </div>
</body>
`;

exports[`OkuAlertDialog > Controlled > should be able to open 1`] = `
<body
  style=""
>
  <span
    data-oku-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    data-v-app=""
  >
    <div>
      <div>
        <img
          alt="a large white house with a red roof"
          src="https://images.unsplash.com/photo-1682686580224-cd46ea1a6950?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80"
        />
      </div>
      
      <button
        aria-controls="oku-18"
        aria-expanded="true"
        aria-haspopup="dialog"
        class="alert-dialog-trigger"
        data-state="open"
        type="button"
      >
        Buy this house
      </button>
      
      
      <!--teleport start-->
      <!--teleport end-->
      <!--teleport start-->
      <!--teleport end-->
      
      
      
    </div>
  </div>
  <div
    class="alert-dialog-overlay"
    data-state="open"
    style="pointer-events: auto;"
  >
    <!---->
  </div>
  
  
  <div
    aria-describedby="oku-20"
    aria-labelledby="oku-19"
    class="alert-dialog-content"
    data-state="open"
    id="oku-18"
    role="alertdialog"
    style="overflow: hidden; pointer-events: auto;"
    tabindex="-1"
  >
    
    <h2
      class="alert-dialog-title"
      id="oku-19"
    >
       Are you sure? 
    </h2>
    <p
      class="alert-dialog-description"
      id="oku-20"
    >
       This will do a very dangerous thing. Thar be dragons! 
    </p>
    <button
      class="alert-dialog-action"
      type="button"
    >
       yolo, do it 
    </button>
    <button
      class="alert-dialog-cancel"
      type="button"
    >
       maybe not 
    </button>
    
    <!---->
  </div>
  
  <!---->
  <!---->
  
  
  
  <span
    data-oku-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;

exports[`OkuAlertDialog > OkuAlertDialog renders correctly 1`] = `""`;

exports[`OkuAlertDialog > OkuAlertDialogAction renders correctly 1`] = `"\`OkuDialogClose\` must be used within \`OkuDialog\`"`;

exports[`OkuAlertDialog > OkuAlertDialogCancel renders correctly 1`] = `"\`OkuAlertDialogCancel\` must be used within \`OkuAlertDialog\`"`;

exports[`OkuAlertDialog > OkuAlertDialogContent renders correctly 1`] = `"\`OkuDialogContent\` must be used within \`OkuDialog\`"`;

exports[`OkuAlertDialog > OkuAlertDialogDescription renders correctly 1`] = `"\`OkuDialogDescription\` must be used within \`OkuDialog\`"`;

exports[`OkuAlertDialog > OkuAlertDialogDescriptionWarning renders correctly 1`] = `[Function]`;

exports[`OkuAlertDialog > OkuAlertDialogOverlay renders correctly 1`] = `"\`OkuDialogOverlay\` must be used within \`OkuDialog\`"`;

exports[`OkuAlertDialog > OkuAlertDialogPortal renders correctly 1`] = `"\`OkuDialogPortal\` must be used within \`OkuDialog\`"`;

exports[`OkuAlertDialog > OkuAlertDialogTitle renders correctly 1`] = `"\`OkuDialogTitle\` must be used within \`OkuDialog\`"`;

exports[`OkuAlertDialog > OkuAlertDialogTrigger renders correctly 1`] = `"\`OkuDialogTrigger\` must be used within \`OkuDialog\`"`;

exports[`OkuAlertDialog > StyledVue > renders correctly 1`] = `
"<div><button type=\\"button\\" aria-haspopup=\\"dialog\\" aria-expanded=\\"true\\" aria-controls=\\"oku-3\\" data-state=\\"open\\" class=\\"alert-dialog-trigger\\"> delete everything </button>
  <!--teleport start-->
  <!--teleport end-->
  <!--teleport start-->
  <!--teleport end-->
</div>"
`;

exports[`OkuAlertDialog > StyledVue > should be able to close 1`] = `
<body
  style=""
>
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  >
    <div>
      
      <button
        aria-controls="oku-9"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="alert-dialog-trigger"
        data-state="closed"
        type="button"
      >
         delete everything 
      </button>
      
      
      <!---->
      <!---->
      
      
      
    </div>
  </div>
</body>
`;

exports[`OkuAlertDialog > StyledVue > should be able to open 1`] = `
<body
  style=""
>
  <span
    data-oku-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    aria-hidden="true"
    data-aria-hidden="true"
    data-v-app=""
  />
  <div
    data-v-app=""
  >
    <div>
      
      <button
        aria-controls="oku-6"
        aria-expanded="true"
        aria-haspopup="dialog"
        class="alert-dialog-trigger"
        data-state="open"
        type="button"
      >
         delete everything 
      </button>
      
      
      <!--teleport start-->
      <!--teleport end-->
      <!--teleport start-->
      <!--teleport end-->
      
      
      
    </div>
  </div>
  <div
    class="alert-dialog-overlay"
    data-state="open"
    style="pointer-events: auto;"
  >
    <!---->
  </div>
  
  
  <div
    aria-describedby="oku-8"
    aria-labelledby="oku-7"
    class="alert-dialog-content"
    data-state="open"
    id="oku-6"
    role="alertdialog"
    style="overflow: hidden; pointer-events: auto;"
    tabindex="-1"
  >
    
    <h2
      class="alert-dialog-title"
      id="oku-7"
    >
       Are you sure? 
    </h2>
    <p
      class="alert-dialog-description"
      id="oku-8"
    >
       This will do a very dangerous thing. Thar be dragons! 
    </p>
    <button
      class="alert-dialog-action"
      type="button"
    >
       yolo, do it 
    </button>
    <button
      class="alert-dialog-cancel"
      type="button"
    >
       maybe not 
    </button>
    
    <!---->
  </div>
  
  <!---->
  <!---->
  
  
  
  <span
    data-oku-focus-guard=""
    style="outline: none; opacity: 0; position: fixed; pointer-events: none;"
    tabindex="0"
  />
</body>
`;
